Fix help button z-index on desktop

--- a/resources/assets/scss/partials/_settings.scss
+++ b/resources/assets/scss/partials/_settings.scss
@@ -12,6 +12,7 @@
     font-size: 20px;
     padding: 15px;
     cursor: pointer;
+    z-index: 1001;
     @include transition(color 0.2s);
 
     &:hover,
